--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^16.14.0",
     "react-google-login": "^5.2.1",
     "react-router-dom": "^5.2.0",
+    "react-wordcloud": "^1.2.7",
     "socket.io": "^3.1.0",
     "socket.io-client": "^3.1.0",
     "url-loader": "^4.1.1"
