--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-wordcloud": "^1.2.7",
     "socket.io": "^3.1.0",
     "socket.io-client": "^3.1.0",
+    "underscore": "^1.12.0",
     "url-loader": "^4.1.1"
   },
   "devDependencies": {
